--- a/ACM/ACM/Tests/ACM.BLTest/ACM.BLTest.csproj
+++ b/ACM/ACM/Tests/ACM.BLTest/ACM.BLTest.csproj
@@ -49,6 +49,8 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OrderRepositoryTest.cs" />
+    <Compile Include="ProductRepositoryTest.cs" />
     <Compile Include="ProductTest.cs" />
     <Compile Include="CustomerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -62,6 +64,9 @@
       <Project>{d6e9f10a-350f-4ed6-afb1-aba1661c33ba}</Project>
       <Name>ACM.BL</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
