--- a/ACM/ACM/ICustomer/ICustomer.csproj
+++ b/ACM/ACM/ICustomer/ICustomer.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D6E9F10A-350F-4ED6-AFB1-ABA1661C33BA}</ProjectGuid>
+    <ProjectGuid>{5E5DB73A-D042-4292-B79A-3611224B7397}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ACM.BL</RootNamespace>
-    <AssemblyName>ACM.BL</AssemblyName>
+    <RootNamespace>ICustomer</RootNamespace>
+    <AssemblyName>ICustomer</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,20 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Address.cs" />
-    <Compile Include="OrderRepository.cs" />
-    <Compile Include="ProductRepository.cs" />
-    <Compile Include="Order.cs" />
-    <Compile Include="Customer.cs" />
-    <Compile Include="OrderItem.cs" />
-    <Compile Include="Product.cs" />
+    <Compile Include="IValidate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ICustomer\ICustomer.csproj">
-      <Project>{5E5DB73A-D042-4292-B79A-3611224B7397}</Project>
-      <Name>ICustomer</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
