--- a/ACM/ACM/ACM.BL/ACM.BL.csproj
+++ b/ACM/ACM/ACM.BL/ACM.BL.csproj
@@ -42,7 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Address.cs" />
+    <Compile Include="Customer1.cs" />
     <Compile Include="CustomerRepository.cs" />
+    <Compile Include="Interface1.cs" />
     <Compile Include="OrderRepository.cs" />
     <Compile Include="ProductRepository.cs" />
     <Compile Include="Order.cs" />
@@ -50,6 +52,8 @@
     <Compile Include="OrderItem.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\SuperCustomer.cs" />
+    <Compile Include="SuperCustomer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ICustomer\ICustomer.csproj">
